--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "@typescript-eslint/interface-name-prefix": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "@typescript-eslint/no-explicit-any": "off",
-    "prettier/prettier": 0
+    "prettier/prettier": 0,
+    "@typescript-eslint/no-non-null-assertion": 0
   }
 }
