--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
+    "@types/morgan": "^1.9.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -21,12 +23,14 @@
     "mongoose": "^5.12.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.2"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.10.5",
+    "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongoose": "^5.10.5",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
