--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
     "@types/morgan": "^1.9.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.4.1",
