--- a/.qovery.yml
+++ b/.qovery.yml
@@ -1,11 +1,12 @@
 ---
 application:
-  name: "garage-backend"
-  project: "garage"
-  organization: "QoveryCommunity"
+  name: 'garage-backend'
+  project: 'garage'
+  organization: 'QoveryCommunity'
+  publicly_accessible: true
 routers:
-- name: "main-garage-backend"
-  routes:
-  - application_name: "garage-backend"
-    paths:
-    - "/*"
+  - name: 'main-garage-backend'
+    routes:
+      - application_name: 'garage-backend'
+        paths:
+          - '/*'
