--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production ts-node dist/app.js",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/app.js",
     "dev": "nodemon -x ts-node src/app.ts",
     "build": "tsc -p ."
   },
