--- a/.qovery.yml
+++ b/.qovery.yml
@@ -1,12 +1,11 @@
 ---
 application:
-  name: 'garage-backend'
-  project: 'garage'
-  organization: 'QoveryCommunity'
-  publicly_accessible: true
+  name: "garage-backend"
+  project: "g2"
+  organization: "QoveryCommunity"
 routers:
-  - name: 'main-garage-backend'
-    routes:
-      - application_name: 'garage-backend'
-        paths:
-          - '/*'
+- name: "main-garage-backend"
+  routes:
+  - application_name: "garage-backend"
+    paths:
+    - "/*"
