--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/morgan": "^1.9.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.1",
     "dotenv": "^8.2.0",
     "envalid": "^7.1.0",
     "express": "^4.17.1",
