--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
