--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/cors": "^2.8.10",
-    "@types/dotenv": "^8.2.0",
-    "@types/morgan": "^1.9.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.21.1",
@@ -28,15 +25,21 @@
     "envalid": "^7.1.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "firebase-admin": "^9.8.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/morgan": "^1.9.2",
+    "@types/uuid": "^8.3.0",
+    "@types/dotenv": "^8.2.0",
     "@types/bcrypt": "^3.0.1",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.11",
