--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.12.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "salted-md5": "^4.0.2",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.2"
